# Babel-Epitech

./: .gitignore  CMakeLists.txt  README.md  clients.db  conanfile.py  protocole.txt
B-CPP-500-PAR-5-1-babel-lal.joncoux-aydin-master/: CMakeSettings.json
B-CPP-500-PAR-5-1-babel-lal.joncoux-aydin-master/.github/workflows/: pre_push.yml
B-CPP-500-PAR-5-1-babel-lal.joncoux-aydin-master/Client/Includes/: ConnexionUdp.hpp
B-CPP-500-PAR-5-1-babel-lal.joncoux-aydin-master/Client/Sources/: main.cpp
B-CPP-500-PAR-5-1-babel-lal.joncoux-aydin-master/Server/Network/Includes/: ConnectionHandler.hpp  ServerNetworkManager.hpp
B-CPP-500-PAR-5-1-babel-lal.joncoux-aydin-master/Server/Network/Sources/: ConnectionHandler.cpp
B-CPP-500-PAR-5-1-babel-lal.joncoux-aydin-master/Server/Queries/Includes/: Queries.hpp
B-CPP-500-PAR-5-1-babel-lal.joncoux-aydin-master/Server/Queries/Sources/: QueryHandlers.cpp
Client/: inputDialog.cpp
Client/Includes/: Audio.hpp  Client.hpp  Encoding.hpp  MainWindow.hpp
Client/Sources/: Audio.cpp  Client.cpp  ConnexionUdp.cpp  Encoding.cpp  MainWindow.cpp
Server/: main.cpp
Server/Database/Includes/: DatabaseController.hpp
Server/Database/Sources/: DatabaseController.cpp
Server/Network/Sources/: ServerNetworkManager.cpp
Server/Queries/Includes/: QueryHandlers.hpp
Server/User/: ServerUser.hpp
